--- a/src/public/html/registration.html
+++ b/src/public/html/registration.html
@@ -39,6 +39,6 @@
     <p id="successMessage" class="success-message"></p>
     <p id="errorMessage" class="error-message"></p>
   </section>
-  <script src="login.js"></script>
+  <script src="js/registration.js"></script>
 </body>
 </html>
