--- a/src/public/html/login.html
+++ b/src/public/html/login.html
@@ -41,8 +41,7 @@
         <button type="submit" id="loginButton" class="btn">Login</button>
       </form>
       <button id="backToRegisterButton" class="btn">Register</button>
-      <p id="successMessage" class="success-message"></p>
-      <p id="errorMessage" class="error-message"></p>
+      <p id="responseMessage" class="success-message"></p>
     </section>
     <script src="js/login.js"></script>
   </body>
