--- a/src/public/html/registration.html
+++ b/src/public/html/registration.html
@@ -59,8 +59,7 @@
         <button type="submit" id="registerButton" class="btn">Register</button>
       </form>
       <button id="backToLoginButton" class="btn">Back to Login</button>
-      <p id="successMessage" class="success-message"></p>
-      <p id="errorMessage" class="error-message"></p>
+      <p id="responseMessage" class="success-message"></p>
     </section>
     <script src="js/registration.js"></script>
   </body>
