--- a/src/public/html/registration.html
+++ b/src/public/html/registration.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/buttons.css" />
-    <link rel="stylesheet" href="css/inputs.css" />
-    <link rel="stylesheet" href="css/login_style.css" />
+    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/buttons.css" />
+    <link rel="stylesheet" href="../css/inputs.css" />
+    <link rel="stylesheet" href="../css/login_style.css" />
     <style>
       body {
         background: #fff;
@@ -61,6 +61,6 @@
       <button id="backToLoginButton" class="btn">Back to Login</button>
       <p id="responseMessage" class="success-message"></p>
     </section>
-    <script src="js/registration.js"></script>
+    <script src="../js/registration.js"></script>
   </body>
 </html>
