Minor changes to HTML

--- a/src/public/html/registration.html
+++ b/src/public/html/registration.html
@@ -26,7 +26,7 @@
             name="inviteCode"
             id="inviteCode"
             required
-            placeholder="Invite Code"
+            placeholder="Invite Code (leer lassen um Team zu erstellen)"
           />
         </div>
         <div class="user-box">
@@ -54,6 +54,33 @@
             id="confirmPassword"
             required=""
             placeholder="Confirm password"
+          />
+        </div>
+        <div class="user-box">
+          <input
+            type="text"
+            name="firstname"
+            id="firstname"
+            required=""
+            placeholder="Firstname"
+          />
+        </div>
+        <div class="user-box">
+          <input
+            type="text"
+            name="lastname"
+            id="lastname"
+            required=""
+            placeholder="Lastname"
+          />
+        </div>
+        <div class="user-box">
+          <input
+            type="text"
+            name="email"
+            id="email"
+            required=""
+            placeholder="E-Mail Adresse"
           />
         </div>
         <button type="submit" id="registerButton" class="btn">Register</button>
