--- a/src/public/html/login.html
+++ b/src/public/html/login.html
@@ -18,7 +18,7 @@
   <body>
     <section>
       <h2>Login</h2>
-      <img src="images/mindShareLogo.png" alt="Logo" title="Login" />
+      <img src="../images/logo.png" alt="Logo" class="logo" title="Login" />
       <form id="loginUserForm">
         <div class="user-box">
           <input
