--- a/src/public/html/registration.html
+++ b/src/public/html/registration.html
@@ -18,7 +18,7 @@
   <body>
     <section>
       <h2>Registration</h2>
-      <img src="images/mindShareLogo.png" alt="Logo" title="Registration" />
+      <img src="../images/logo.png" alt="Logo" class="logo" title="Registration" />
       <form id="registerUserForm">
         <div class="user-box">
           <input
