--- a/src/public/html/details_player.html
+++ b/src/public/html/details_player.html
@@ -8,10 +8,24 @@
   <link rel="stylesheet" href="../css/buttons.css" />
   <link rel="stylesheet" href="../css/inputs.css" />
   <link rel="stylesheet" href="../css/player_info_style.css" />
+  <link rel="stylesheet" href="../css/burger_menu.css" />
   <title>Teamgeist - Player Information</title>
 </head>
 
 <body>
+  <div class="top_header">
+    <div class="burger-menu">
+      <button id="burgerMenuButton">&#9776;</button>
+      <div id="burgerMenuContent" class="burger-menu-content">
+        <a href="/dashboard">Dashboard</a>
+        <a href="/teamDetails">Team Details</a>
+        <a href="/userDetails">User Details</a>
+        <a href="/activityDetails">Show Activity</a>
+        <a href="/activityCreation">Create Activity</a>
+        <a href="#" id="logoutLink">Logout</a>
+      </div>
+    </div>
+  </div>
   <section>
     <form id="playerInfoForm">
       <strong>Player Information</strong>
