--- a/src/public/html/dashboard.html
+++ b/src/public/html/dashboard.html
@@ -35,7 +35,7 @@
     </div>
     <div class="bot_header">
       <p id="userGreeting">Loading...</p>
-  </div>
+    </div>
   </header>
   <section>
     <div class="dashboard_element">
@@ -103,6 +103,7 @@
     <button class="btn">Neue Aktivität hinzufügen</button>
   </footer>
   <script src="../js/dashboard.js"></script>
+  <script src="../js/burger_menu.js"></script>
 </body>
 
 </html>
