added dashboard, modified other .html and .js

--- a/src/public/html/details_team.html
+++ b/src/public/html/details_team.html
@@ -57,6 +57,7 @@
     </form>
   </section>
   <script src="../js/details_team.js"></script>
+  <script src="../js/burger_menu.js"></script>
 </body>
 
 </html>
