--- a/src/public/html/activity_creation.html
+++ b/src/public/html/activity_creation.html
@@ -13,13 +13,26 @@
 </head>
 
 <body>
+  <div class="top_header">
+    <div class="burger-menu">
+      <button id="burgerMenuButton">&#9776;</button>
+      <div id="burgerMenuContent" class="burger-menu-content">
+        <a href="/dashboard">Dashboard</a>
+        <a href="/teamDetails">Team Details</a>
+        <a href="/userDetails">User Details</a>
+        <a href="/activityDetails">Show Activity</a>
+        <a href="/activityCreation">Create Activity</a>
+        <a href="#" id="logoutLink">Logout</a>
+      </div>
+    </div>
+  </div>
   <section>
     <form action="#">
       <div class="team_geist_form_row">
         <div>
           <label for="betreff">Betreff</label>
         </div>
-        <input type="text" name="betreff" id="betreff" />
+        <input type="text" name="betreff" id="betreff" required />
       </div>
       <div class="team_geist_form_row">
         <div>
@@ -37,14 +50,14 @@
           <label for="datum">Datum und Uhrzeit</label>
         </div>
 
-        <input type="datetime-local" name="datum" id="datum" />
+        <input type="datetime-local" name="datum" id="datum" required/>
       </div>
       <div class="team_geist_form_row">
         <div>
           <label for="ort">Ort</label>
         </div>
 
-        <input type="text" name="ort" id="ort" />
+        <input type="text" name="ort" id="ort" required/>
       </div>
     </form>
     <button id="save_btn" class="btn">Speichern</button>
@@ -52,18 +65,5 @@
   </section>
   <script src="../js/activity_creation.js"></script>
 </body>
-<div class="top_header">
-  <div class="burger-menu">
-    <button id="burgerMenuButton">&#9776;</button>
-    <div id="burgerMenuContent" class="burger-menu-content">
-      <a href="/dashboard">Dashboard</a>
-      <a href="/teamDetails">Team Details</a>
-      <a href="/userDetails">User Details</a>
-      <a href="/activityDetails">Show Activity</a>
-      <a href="/activityCreation">Create Activity</a>
-      <a href="#" id="logoutLink">Logout</a>
-    </div>
-  </div>
-  <h2>Team FH Wien</h2>
-</div>
+
 </html>
