--- a/src/public/html/dashboard.html
+++ b/src/public/html/dashboard.html
@@ -37,70 +37,10 @@
       <p id="userGreeting">Loading...</p>
     </div>
   </header>
-  <section>
-    <div class="dashboard_element">
-      <h3>Wöchentliches Training</h3>
-      <strong>Training</strong>
-      <div class="todos">
-        <div class="todo_row">
-          <strong class="todo_meta">Wann</strong>
-          <span>-</span>
-          <strong>Montag, 29.01.2024, 19:00 Uhr</strong>
-        </div>
-        <div class="todo_row">
-          <strong class="todo_meta">Wo</strong>
-          <span> -</span>
-          <strong>Sporthalle FH Campus</strong>
-        </div>
-      </div>
-      <div class="dashboard_btns">
-        <button class="btn active">Zusagen</button>
-        <button class="btn">Absagen</button>
-      </div>
-    </div>
-    <div class="dashboard_element">
-      <h3>Erstes Spiel gegen FC Technikum</h3>
-      <strong>Spiel - Endergebnis: __:__</strong>
-      <div class="todos">
-        <div class="todo_row">
-          <strong class="todo_meta">Wann</strong>
-          <span>-</span>
-          <strong>Samstag, 03.02.2024, 15:00 Uhr</strong>
-        </div>
-        <div class="todo_row">
-          <strong class="todo_meta">Wo</strong>
-          <span> -</span>
-          <strong>Fussballstadion Favoriten</strong>
-        </div>
-      </div>
-      <div class="dashboard_btns">
-        <button class="btn">Zusagen</button>
-        <button class="btn active">Absagen</button>
-      </div>
-    </div>
-    <div class="dashboard_element">
-      <h3>Wanderung auf dem Kahlenberg</h3>
-      <strong>Andere Aktivitat</strong>
-      <div class="todos">
-        <div class="todo_row">
-          <strong class="todo_meta">Wann</strong>
-          <span>-</span>
-          <strong>Montag, 10.01.2024, 10:00 Uhr</strong>
-        </div>
-        <div class="todo_row">
-          <strong class="todo_meta">Wo</strong>
-          <span> -</span>
-          <strong>Fussballstadion Favoriten</strong>
-        </div>
-      </div>
-      <div class="dashboard_btns">
-        <button class="btn active">Zusagen</button>
-        <button class="btn">Absagen</button>
-      </div>
-    </div>
+  <section id="activitySection">
   </section>
   <footer>
-    <button class="btn">Neue Aktivität hinzufügen</button>
+    <button class="btn" id="createActivity">Neue Aktivität hinzufügen</button>
   </footer>
   <script src="../js/dashboard.js"></script>
   <script src="../js/burger_menu.js"></script>
