--- a/src/public/html/details_player.html
+++ b/src/public/html/details_player.html
@@ -42,6 +42,7 @@
     </form>
   </section>
   <script src="../js/details_player.js"></script>
+  <script src="../js/burger_menu.js"></script>
 </body>
 
 </html>
