added burger menu scripts to activity

--- a/src/public/html/activity_creation.html
+++ b/src/public/html/activity_creation.html
@@ -64,6 +64,7 @@
     <button id="cancel_btn" class="btn">Abbrechen</button>
   </section>
   <script src="../js/activity_creation.js"></script>
+  <script src="../js/burger_menu.js"></script>
 </body>
 
 </html>
