--- a/src/public/html/activity_details.html
+++ b/src/public/html/activity_details.html
@@ -49,6 +49,7 @@
     <button id="back_btn" class="btn">Zuruck</button>
   </section>
   <script src="../js/activity_details.js"></script>
+  <script src="../js/burger_menu.js"></script>
 </body>
 
 </html>
