--- a/src/public/html/activity_details.html
+++ b/src/public/html/activity_details.html
@@ -13,6 +13,19 @@
 </head>
 
 <body>
+  <div class="top_header">
+    <div class="burger-menu">
+      <button id="burgerMenuButton">&#9776;</button>
+      <div id="burgerMenuContent" class="burger-menu-content">
+        <a href="/dashboard">Dashboard</a>
+        <a href="/teamDetails">Team Details</a>
+        <a href="/userDetails">User Details</a>
+        <a href="/activityDetails">Show Activity</a>
+        <a href="/activityCreation">Create Activity</a>
+        <a href="#" id="logoutLink">Logout</a>
+      </div>
+    </div>
+  </div>
   <section>
     <div id="results">
       <div class="team_geist_form_row">
