Added ability to save opponent for games

--- a/src/public/html/activity_creation.html
+++ b/src/public/html/activity_creation.html
@@ -43,6 +43,12 @@
           <option value="Other Activity">Andere Aktivität</option>
         </select>
       </div>
+      <div class="team_geist_form_row" id="gegner_row">
+        <div>
+          <label for="gegner">Gegner</label>
+        </div>
+        <input type="text" name="gegner" id="gegner" required/>
+      </div>
       <div class="team_geist_form_row">
         <div>
           <label for="datum">Datum und Uhrzeit</label>
