Fixed delete team and added attending members list in activity

--- a/src/public/html/activity_details.html
+++ b/src/public/html/activity_details.html
@@ -54,6 +54,10 @@
         <strong id="ort" class="values"></strong>
       </div>
     </div>
+    <div class="container">
+      <strong>Players</strong>
+      <div id="playerList" class="player_select"></div>
+    </div>
 
     <button id="accept_btn" class="btn">Zusage</button>
     <button id="decline_btn" class="btn">Absage</button>
