Fixed deleting activities bug

--- a/src/public/html/dashboard.html
+++ b/src/public/html/dashboard.html
@@ -29,7 +29,7 @@
           <a href="#" id="logoutLink">Logout</a>
         </div>
       </div>
-      <h2>Team FH Wien</h2>
+      <h2>Teamgeist</h2>
     </div>
     <div class="bot_header">
       <p id="userGreeting">Loading...</p>
